--- a/README
+++ b/README
@@ -1,16 +1,13 @@
 [ nc_sim ]
 Neuronal culture simulator
 ==========================
-A small python package to simulate the growth (axons.*) and activity (neurons.*) of neuronal cultures in environment with obastacles
+A small python package to simulate the growth (axons.*) and activity (neurons.*) of neuronal cultures in environment with obstacles
 
 by: Akke Mats Houben (akkemats.houben@ub.edu -- akkeh.github.io)
 
-License
 =========================
 This code belongs to an upcoming publication (in prep.). 
 Please contact me for the correct reference if you use this code for anything.
 
 Please cite as:
 ...
-
-<other license info to come...>
