--- a/README
+++ b/README
@@ -6,8 +6,5 @@ A small python package to simulate the growth (axons.*) and activity (neurons.*)
 by: Akke Mats Houben (akkemats.houben@ub.edu -- akkeh.github.io)
 
 =========================
-This code belongs to an upcoming publication (in prep.). 
-Please contact me for the correct reference if you use this code for anything.
-
-Please cite as:
-...
+When using this code, please cite:
+    A.M. Houben, J. Garcia-Ojalvo & J. Soriano, Role of connectivity anisotropies in the dynamics of cultured neuronal networks, arXiv:2501.04427 (2025)
